--- a/tributaria.html
+++ b/tributaria.html
@@ -28,7 +28,7 @@
             <a href="tributaria.html#ecommerce">Contáctanos</a>
           </li>
           <li>
-            <a href="">Blog</a>
+            <a href="https://asasgroupsas.blogspot.com/">Blog</a>
           </li>
         </ul>
       </nav>
