--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/estilos.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <link rel="stylesheet" href="css/grid.css" />
+    <link rel="icon" type="image.png" href="images/favicon.png" />
+    <link rel="canonical" href="https://www.asasgroup.com.co/" />
     <title>ASAS GROUP - Tu mejor Aliado!</title>
   </head>
   <body>
