--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="El sitio de los mejores!" />
+    <meta name="author" content="Yayoamerchan" />
+    <meta
+      name="keywords"
+      content="Asas Group, contadores, contabilidad, servicios, contables, tributarios, financieros"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/estilos.css" />
     <link rel="stylesheet" href="css/mobile.css" />
