--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <!-- ----slogan -->
       <div class="slogan">
         <h2>
-          ¡Con nuestra asesoría <br />
-          mide, evalúa y proyecta tu negocio!
+          ¡Con Nuestra Asesoría <br />
+          Mide, Evalúa y Proyecta Tu Negocio!
         </h2>
       </div>
 
@@ -245,6 +245,16 @@
                 >
                   <img src="images/instagram.svg" id="socialImage" alt="" />
                   <p><strong>asas_group</strong></p>
+                </a>
+              </div>
+              <div class="youtube">
+                <a
+                  href="https://www.youtube.com/channel/UC-IrFp-_73s5o8YHUHdszXA"
+                  class="socialLink"
+                  target="_blank"
+                >
+                  <img src="images/youtube.svg" id="socialImage" alt="" />
+                  <p><strong>Asas Group</strong></p>
                 </a>
               </div>
               <div>
